iOS: Updated BASS librairies; added libbassenc.so.
- The AAC encoder works on iOS
- Shoutcast seems to be working but has the same problem as Windows
(crashes the Shoutcast server, probably due to a problem in the server
configuration).

--- a/MPfm.Player/MPfm.Player.iOS.csproj
+++ b/MPfm.Player/MPfm.Player.iOS.csproj
@@ -175,5 +175,7 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
+    <Compile Include="Objects\CastServerMetadata.cs" />
+    <Compile Include="Objects\CastServerParams.cs" />
   </ItemGroup>
 </Project>
