Android: Updated BASS librairies and added BASSENC. ALAC and MPC are now supported.
- Updated all existing librariries for ARMEABI-V7A and added librairies
for ARMEABI and X86. Unfortunately, some plugins are not available for
X86. Will have to test on a X86 device to check for crashes.
- Added support for ALAC and MPC file formats.

--- a/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm.Android/MPfm.Android.csproj
@@ -181,6 +181,23 @@
     <AndroidNativeLibrary Include="Lib\armeabi\libDropboxSync.so" />
     <AndroidNativeLibrary Include="Lib\x86\libDropboxSync.so" />
     <AndroidNativeLibrary Include="Lib\armeabi-v7a\libDropboxSync.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi-v7a\libbassenc.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi-v7a\libbass_mpc.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbass.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbassenc.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbassflac.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbassmix.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbasswv.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbass_aac.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbass_alac.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbass_ape.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbass_fx.so" />
+    <AndroidNativeLibrary Include="Lib\armeabi\libbass_mpc.so" />
+    <AndroidNativeLibrary Include="Lib\x86\libbass.so" />
+    <AndroidNativeLibrary Include="Lib\x86\libbassenc.so" />
+    <AndroidNativeLibrary Include="Lib\x86\libbassflac.so" />
+    <AndroidNativeLibrary Include="Lib\x86\libbassmix.so" />
+    <AndroidNativeLibrary Include="Lib\x86\libbasswv.so" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <AndroidResource Include="Resources\layout\Player.axml">
