--- a/MPfm.Player/MPfm.Player.Android.csproj
+++ b/MPfm.Player/MPfm.Player.Android.csproj
@@ -94,9 +94,6 @@
       <HintPath>..\MPfm.Sound\Lib\Android\taglib-sharp.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="Lib\Bass.Net.dll" />
-  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
@@ -118,6 +115,8 @@
   <ItemGroup>
     <Compile Include="Exceptions\PlayerCreateStreamException.cs" />
     <Compile Include="IPlayer.cs" />
+    <Compile Include="Objects\CastServerMetadata.cs" />
+    <Compile Include="Objects\CastServerParams.cs" />
     <Compile Include="Objects\PlayerSyncProc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\RepeatType.cs" />
@@ -128,5 +127,8 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lib\" />
   </ItemGroup>
 </Project>
