Mac: Added new endpoints to SyncListenerService.
- /api/player    Returns the current player status and metadata
- /api/playlist  Returns the current player playlist
- /api/remote/*  Remote commands for controlling the player
                 Commands: play, pause, stop, previous, next, goto
(/api/remote/goto/[playlist_item_index]).

--- a/MPfm.Player/MPfm.Player.OSX.csproj
+++ b/MPfm.Player/MPfm.Player.OSX.csproj
@@ -114,5 +114,6 @@
     <Compile Include="Events\AudioInterruptedData.cs" />
     <Compile Include="Objects\CastServerParams.cs" />
     <Compile Include="Objects\CastServerMetadata.cs" />
+    <Compile Include="Objects\PlayerMetadata.cs" />
   </ItemGroup>
 </Project>
