OSX: Refactoring in SyncListenerService (extracted abstract base class).
- Extracted most of the basic logic from SyncListenerService to
SyncListenerServiceBase; now SyncListenerService only has the business
logic for responding to HTTP commands.
- Cleanup in AppConfig classes.

--- a/MPfm.Library/MPfm.Library.WindowsPhone.csproj
+++ b/MPfm.Library/MPfm.Library.WindowsPhone.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
+        <Compile Include="Services\SyncListenerServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\sqlite-net-wp8\Sqlite.vcxproj">
