--- a/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm.Library/MPfm.Library.csproj
@@ -209,5 +209,6 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
+        <Compile Include="Services\SyncListenerServiceBase.cs" />
   </ItemGroup>
 </Project>
