--- a/MPfm.Library/MPfm.Library.WindowsStore.csproj
+++ b/MPfm.Library/MPfm.Library.WindowsStore.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
+        <Compile Include="Services\SyncListenerServiceBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsStore.csproj">
