--- a/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm.Library/MPfm.Library.iOS.csproj
@@ -252,5 +252,6 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
+    <Compile Include="Services\SyncListenerServiceBase.cs" />
   </ItemGroup>
 </Project>
