--- a/MPfm.Player/MPfm.Player.iOS.csproj
+++ b/MPfm.Player/MPfm.Player.iOS.csproj
@@ -177,5 +177,6 @@
     <Compile Include="Events\AudioInterruptedData.cs" />
     <Compile Include="Objects\CastServerMetadata.cs" />
     <Compile Include="Objects\CastServerParams.cs" />
+    <Compile Include="Objects\PlayerMetadata.cs" />
   </ItemGroup>
 </Project>
