OSX: Finished revamping the UI in SyncWindow. Added new device icons.
- SyncWindow new UI is now pretty much complete (but not dynamic yet).
The window is now tentatively called 'Devices' and merges ResumePlayback
and SyncWindow together, with new remote player controls.
- Added new icons for identifying devices. This took several hours of
work (multiple iterations) to get to this.

--- a/MPfm.OSX/MPfm.OSX.csproj
+++ b/MPfm.OSX/MPfm.OSX.csproj
@@ -601,5 +601,45 @@
     <BundleResource Include="Resources\icon_roundbutton_reset%402x.png" />
     <BundleResource Include="Resources\icon_roundbutton_minus.png" />
     <BundleResource Include="Resources\icon_roundbutton_minus%402x.png" />
+    <BundleResource Include="Resources\tablet_android.png" />
+    <BundleResource Include="Resources\tablet_android%402x.png" />
+    <BundleResource Include="Resources\tablet_ipad.png" />
+    <BundleResource Include="Resources\tablet_ipad%402x.png" />
+    <BundleResource Include="Resources\tablet_windows.png" />
+    <BundleResource Include="Resources\tablet_windows%402x.png" />
+    <BundleResource Include="Resources\pc_android.png" />
+    <BundleResource Include="Resources\pc_android%402x.png" />
+    <BundleResource Include="Resources\pc_linux.png" />
+    <BundleResource Include="Resources\pc_linux%402x.png" />
+    <BundleResource Include="Resources\pc_mac.png" />
+    <BundleResource Include="Resources\pc_mac%402x.png" />
+    <BundleResource Include="Resources\pc_windows.png" />
+    <BundleResource Include="Resources\pc_windows%402x.png" />
+    <BundleResource Include="Resources\pc_android_large.png" />
+    <BundleResource Include="Resources\pc_android_large%402x.png" />
+    <BundleResource Include="Resources\pc_linux_large.png" />
+    <BundleResource Include="Resources\pc_linux_large%402x.png" />
+    <BundleResource Include="Resources\pc_mac_large.png" />
+    <BundleResource Include="Resources\pc_mac_large%402x.png" />
+    <BundleResource Include="Resources\pc_windows_large.png" />
+    <BundleResource Include="Resources\pc_windows_large%402x.png" />
+    <BundleResource Include="Resources\phone_android.png" />
+    <BundleResource Include="Resources\phone_android%402x.png" />
+    <BundleResource Include="Resources\phone_windows.png" />
+    <BundleResource Include="Resources\phone_windows%402x.png" />
+    <BundleResource Include="Resources\phone_iphone.png" />
+    <BundleResource Include="Resources\phone_iphone%402x.png" />
+    <BundleResource Include="Resources\phone_windows_large.png" />
+    <BundleResource Include="Resources\phone_windows_large%402x.png" />
+    <BundleResource Include="Resources\phone_android_large.png" />
+    <BundleResource Include="Resources\phone_android_large%402x.png" />
+    <BundleResource Include="Resources\phone_iphone_large.png" />
+    <BundleResource Include="Resources\phone_iphone_large%402x.png" />
+    <BundleResource Include="Resources\tablet_android_large.png" />
+    <BundleResource Include="Resources\tablet_android_large%402x.png" />
+    <BundleResource Include="Resources\tablet_ipad_large.png" />
+    <BundleResource Include="Resources\tablet_ipad_large%402x.png" />
+    <BundleResource Include="Resources\tablet_windows_large.png" />
+    <BundleResource Include="Resources\tablet_windows_large%402x.png" />
   </ItemGroup>
 </Project>
