OSX: Introducing new Devices icon for toolbar. Removed ResumePlayback from toolbar.

--- a/MPfm.OSX/MPfm.OSX.csproj
+++ b/MPfm.OSX/MPfm.OSX.csproj
@@ -641,5 +641,7 @@
     <BundleResource Include="Resources\tablet_ipad_large%402x.png" />
     <BundleResource Include="Resources\tablet_windows_large.png" />
     <BundleResource Include="Resources\tablet_windows_large%402x.png" />
+    <BundleResource Include="Resources\toolbar_devices.png" />
+    <BundleResource Include="Resources\toolbar_devices%402x.png" />
   </ItemGroup>
 </Project>
