OSX: Added SyncDeviceManagerService (prototype).
- SyncDeviceManagerService is a service that consumes
SyncDiscoveryService and manages a list of sync devices. It contains a
looper to update the player status of every device every 5 seconds. This
is a working prototype.
- SyncPresenter is using the new service for testing but the view isn't
updated properly.

--- a/MPfm.Library/MPfm.Library.WindowsStore.csproj
+++ b/MPfm.Library/MPfm.Library.WindowsStore.csproj
@@ -165,6 +165,9 @@
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
         <Compile Include="Services\SyncListenerServiceBase.cs" />
+            <Compile Include="Services\SyncDeviceManagerService.cs" />
+    <Compile Include="Services\Interfaces\ISyncDeviceManagerService.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsStore.csproj">
