--- a/MPfm.Library/MPfm.Library.OSX.csproj
+++ b/MPfm.Library/MPfm.Library.OSX.csproj
@@ -210,5 +210,7 @@
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
     <Compile Include="Services\SyncListenerServiceBase.cs" />
+    <Compile Include="Services\SyncDeviceManagerService.cs" />
+    <Compile Include="Services\Interfaces\ISyncDeviceManagerService.cs" />
   </ItemGroup>
 </Project>
