--- a/MPfm.Library/MPfm.Library.WindowsPhone.csproj
+++ b/MPfm.Library/MPfm.Library.WindowsPhone.csproj
@@ -181,6 +181,9 @@
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
         <Compile Include="Services\SyncListenerServiceBase.cs" />
+            <Compile Include="Services\SyncDeviceManagerService.cs" />
+    <Compile Include="Services\Interfaces\ISyncDeviceManagerService.cs" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\sqlite-net-wp8\Sqlite.vcxproj">
