--- a/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm.Player/MPfm.Player.csproj
@@ -104,6 +104,7 @@
     <Compile Include="IPlayer.cs" />
     <Compile Include="Objects\CastServerMetadata.cs" />
     <Compile Include="Objects\CastServerParams.cs" />
+    <Compile Include="Objects\PlayerMetadata.cs" />
     <Compile Include="Objects\PlayerSyncProc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Objects\RepeatType.cs" />
