OSX: Added new generic progress bar (including indeterminate status).
- Added BasicPath, BasicPathLine and IBasicPathItem to define generic
paths. More implementations of IBasicPathItem will be added as needed.
- Added DrawPath to IGraphicsContextWrapper and implemented on OSX.
- Added path conversion to GenericControlHelper on OSX.
- Added ProgressBarControl, which is a flat progress bar with also an
indeterminate status with a nice animation.
- Added CircularProgressBarControl, but it is empty for now.
- Replaced progress indicators by new generic progress bars throughout
the app.

--- a/MPfm.GenericControls/MPfm.GenericControls.PCL.csproj
+++ b/MPfm.GenericControls/MPfm.GenericControls.PCL.csproj
@@ -64,5 +64,10 @@
     <Compile Include="Renderers\IRenderer.cs" />
     <Compile Include="Theme\ITheme.cs" />
     <Compile Include="Theme\GenericTheme.cs" />
+        <Compile Include="Controls\ProgressBarControl.cs" />
+    <Compile Include="Controls\CircularProgressBarControl.cs" />
+    <Compile Include="Basics\BasicPath.cs" />
+    <Compile Include="Basics\IBasicPathItem.cs" />
+    <Compile Include="Basics\BasicPathLine.cs" />
   </ItemGroup>
 </Project>
