OSX: Added Loop and Marker details panels in MainWindow.
- The panels are empty for now but a back button has been added to go
back to Loops/Markers.
- Added icon for back

--- a/MPfm.OSX/MPfm.OSX.csproj
+++ b/MPfm.OSX/MPfm.OSX.csproj
@@ -513,5 +513,7 @@
     <BundleResource Include="Resources\toolbar_open.png" />
     <BundleResource Include="Resources\toolbar_save.png" />
     <BundleResource Include="Resources\toolbar_save%402x.png" />
+    <BundleResource Include="Resources\icon_button_back.png" />
+    <BundleResource Include="Resources\icon_button_back%402x.png" />
   </ItemGroup>
 </Project>
