OSX: Added UI for Marker Details.
- Added Punch in icon

--- a/MPfm.OSX/MPfm.OSX.csproj
+++ b/MPfm.OSX/MPfm.OSX.csproj
@@ -515,5 +515,7 @@
     <BundleResource Include="Resources\toolbar_save%402x.png" />
     <BundleResource Include="Resources\icon_button_back.png" />
     <BundleResource Include="Resources\icon_button_back%402x.png" />
+    <BundleResource Include="Resources\icon_button_punch_in.png" />
+    <BundleResource Include="Resources\icon_button_punch_in%402x.png" />
   </ItemGroup>
 </Project>
