OSX: Added ISegmentDetailsView.

--- a/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -328,5 +328,8 @@
     <Compile Include="Services\Interfaces\ILifecycleService.cs" />
     <Compile Include="Services\Interfaces\IResumePlaybackService.cs" />
     <Compile Include="Services\ResumePlaybackService.cs" />
+    <Compile Include="Views\ISegmentDetailsView.cs" />
+    <Compile Include="Presenters\SegmentDetailsPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISegmentDetailsPresenter.cs" />    
   </ItemGroup>
 </Project>
