--- a/MPfm.MVP/MPfm.MVP.WindowsStore.csproj
+++ b/MPfm.MVP/MPfm.MVP.WindowsStore.csproj
@@ -260,6 +260,9 @@
     <Compile Include="Messages\PlayerPlaylistUpdatedMessage.cs" />
     <Compile Include="Views\IDesktopPreferencesView.cs" />
     <Compile Include="Views\IDesktopEffectsView.cs" />
+    <Compile Include="Views\ISegmentDetailsView.cs" />
+    <Compile Include="Presenters\SegmentDetailsPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISegmentDetailsPresenter.cs" />    
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsStore.csproj">
