OSX: Marker Details data are now bound to the UI controls.
- Fixed bug with buttons where the mouse over status would not be
cleared when clicking the button
- Marker details are now displayed correctly but not actually saved
- Added messages for loops and segments, plus a new message to indicate
when a marker is edited (the MarkerDetails is no longer a different
dialog, so it is part of IMainView and requires a message to be
refreshed).

--- a/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
+++ b/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
@@ -299,6 +299,13 @@
     <Compile Include="Views\ISegmentDetailsView.cs" />
     <Compile Include="Presenters\SegmentDetailsPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISegmentDetailsPresenter.cs" />    
+    <Compile Include="Messages\MarkerBeingEditedMessage.cs" />
+    <Compile Include="Messages\LoopActivatedMessage.cs" />
+    <Compile Include="Messages\LoopBeingEditedMessage.cs" />
+    <Compile Include="Messages\LoopUpdatedMessage.cs" />
+    <Compile Include="Messages\SegmentActivatedMessage.cs" />
+    <Compile Include="Messages\SegmentBeingEditedMessage.cs" />
+    <Compile Include="Messages\SegmentUpdatedMessage.cs" />    
   </ItemGroup>
   <ItemGroup>
     <Reference Include="TinyIoC">
