OSX: Updated Effects UI.
- Effects UI is now using a table view instead of a combo box to select
presets. The panels have been moved to the left, and a better separation
between list of presets vs preset details.
- Added custom textbox that changes its background color when disabled.
Now using that text box in several windows.

--- a/MPfm.OSX/MPfm.OSX.csproj
+++ b/MPfm.OSX/MPfm.OSX.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Classes\Controls\Graphics\BasicImage.cs" />
     <Compile Include="Classes\Controls\MPfmProgressBarView.cs" />
     <Compile Include="Classes\Controls\MPfmCircularProgressBarView.cs" />
+    <Compile Include="Classes\Controls\MPfmTextField.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Views\LibraryBrowser.xib" />
