OSX: Added contextual menu + Duplicate + Export in Effects window.
Effects window:
- Added contextual menu with 'remove', 'duplicate' and 'export.
- Added Duplicate and Export functionality to
IEqualizerPresetsView/EqualizerPresetsPresenter
- Fixed more bugs

--- a/MPfm.MVP/MPfm.MVP.OSX.csproj
+++ b/MPfm.MVP/MPfm.MVP.OSX.csproj
@@ -86,6 +86,9 @@
     <Reference Include="Spring.Social.Dropbox">
       <HintPath>..\MPfm.Library\Lib\Spring.Social.Dropbox.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\MPfm.Library\Lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
