OSX: Added messages to notify configuration change.
- Output meter and song position timer intervals are now updated in real
time when changing the values in General preferences.

--- a/MPfm.MVP/MPfm.MVP.OSX.csproj
+++ b/MPfm.MVP/MPfm.MVP.OSX.csproj
@@ -337,5 +337,9 @@
     <Compile Include="Messages\SegmentActivatedMessage.cs" />
     <Compile Include="Messages\SegmentBeingEditedMessage.cs" />
     <Compile Include="Messages\SegmentUpdatedMessage.cs" />
+    <Compile Include="Messages\CloudAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\GeneralAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\AudioAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\LibraryAppConfigChangedMessage.cs" />
   </ItemGroup>
 </Project>
