--- a/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
+++ b/MPfm.MVP/MPfm.MVP.WindowsPhone.csproj
@@ -306,6 +306,10 @@
     <Compile Include="Messages\SegmentActivatedMessage.cs" />
     <Compile Include="Messages\SegmentBeingEditedMessage.cs" />
     <Compile Include="Messages\SegmentUpdatedMessage.cs" />    
+    <Compile Include="Messages\CloudAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\GeneralAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\AudioAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\LibraryAppConfigChangedMessage.cs" />    
   </ItemGroup>
   <ItemGroup>
     <Reference Include="TinyIoC">
