--- a/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm.MVP/MPfm.MVP.csproj
@@ -332,5 +332,9 @@
     <Compile Include="Views\ISegmentDetailsView.cs" />
     <Compile Include="Presenters\SegmentDetailsPresenter.cs" />
     <Compile Include="Presenters\Interfaces\ISegmentDetailsPresenter.cs" />
+    <Compile Include="Messages\CloudAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\GeneralAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\AudioAppConfigChangedMessage.cs" />
+    <Compile Include="Messages\LibraryAppConfigChangedMessage.cs" />    
   </ItemGroup>
 </Project>
