iOS: Trying to fix Jenkins.
Trying to fix this error by adding a reference to Bass.Net.iOS:
Failed to resolve assembly: 'Bass.Net.OSX, Version=2.4.10.3,
Culture=neutral, PublicKeyToken=b7566c273e6ef480'

--- a/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -140,15 +140,12 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <None Include="Lib\Ninject.dll" />
-    <None Include="Lib\AutoMapper.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <Folder Include="Helpers\" />
     <Folder Include="Services\Interfaces\" />
     <Folder Include="Presenters\Interfaces\" />
     <Folder Include="Config\" />
     <Folder Include="Messages\" />
+    <Folder Include="Lib\" />
   </ItemGroup>
   <ProjectExtensions>
     <MonoDevelop>
