--- a/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm.iOS/MPfm.iOS.csproj
@@ -128,6 +128,9 @@
     <Reference Include="DropBoxSync.iOS">
       <HintPath>Lib\DropBoxSync.iOS.dll</HintPath>
     </Reference>
+    <Reference Include="Bass.Net.iOS">
+      <HintPath>..\MPfm.Sound\Lib\iOS\Bass.Net.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
