OSX: Added segments to loops.
- Added segment concept to loops. Implemented segments in player, not
tested yet.

--- a/MPfm.Player/MPfm.Player.OSX.csproj
+++ b/MPfm.Player/MPfm.Player.OSX.csproj
@@ -115,5 +115,6 @@
     <Compile Include="Objects\CastServerParams.cs" />
     <Compile Include="Objects\CastServerMetadata.cs" />
     <Compile Include="Objects\PlayerMetadata.cs" />
+    <Compile Include="Objects\Segment.cs" />
   </ItemGroup>
 </Project>
