Updated project files with new files.
- Did not include these changes in the last commit to test Jenkins and
make sure unstable builds do not make it to the master branch.

--- a/MPfm.Player/MPfm.Player.WindowsStore.csproj
+++ b/MPfm.Player/MPfm.Player.WindowsStore.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Objects\Marker.cs" />    
     <Compile Include="Events\AudioInterruptedData.cs" />
     <Compile Include="WinRT\Player.cs" />
+        <Compile Include="Objects\Segment.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsStore.csproj">
