--- a/MPfm.Player/MPfm.Player.Android.csproj
+++ b/MPfm.Player/MPfm.Player.Android.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
+        <Compile Include="Objects\Segment.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lib\" />
