--- a/MPfm.Player/MPfm.Player.WindowsPhone.csproj
+++ b/MPfm.Player/MPfm.Player.WindowsPhone.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
     <Compile Include="WinRT\Player.cs" />
+        <Compile Include="Objects\Segment.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.WindowsPhone.csproj">
