--- a/MPfm.Player/MPfm.Player.csproj
+++ b/MPfm.Player/MPfm.Player.csproj
@@ -115,5 +115,6 @@
     <Compile Include="Objects\Marker.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Events\AudioInterruptedData.cs" />
+        <Compile Include="Objects\Segment.cs" />
   </ItemGroup>
 </Project>
