--- a/MPfm.Player/MPfm.Player.iOS.csproj
+++ b/MPfm.Player/MPfm.Player.iOS.csproj
@@ -178,5 +178,6 @@
     <Compile Include="Objects\CastServerMetadata.cs" />
     <Compile Include="Objects\CastServerParams.cs" />
     <Compile Include="Objects\PlayerMetadata.cs" />
+        <Compile Include="Objects\Segment.cs" />
   </ItemGroup>
 </Project>
