--- a/MPfm.MVP/MPfm.MVP.OSX.csproj
+++ b/MPfm.MVP/MPfm.MVP.OSX.csproj
@@ -341,5 +341,9 @@
     <Compile Include="Messages\GeneralAppConfigChangedMessage.cs" />
     <Compile Include="Messages\AudioAppConfigChangedMessage.cs" />
     <Compile Include="Messages\LibraryAppConfigChangedMessage.cs" />
+    <Compile Include="Views\ILoopPlaybackView.cs" />
+    <Compile Include="Models\LoopPlaybackEntity.cs" />
+    <Compile Include="Presenters\Interfaces\ILoopPlaybackPresenter.cs" />
+    <Compile Include="Presenters\LoopPlaybackPresenter.cs" />
   </ItemGroup>
 </Project>
