--- a/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm.Library/MPfm.Library.csproj
@@ -115,6 +115,7 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Scripts\1.06-1.07.sql" />
     <EmbeddedResource Include="Scripts\1.05-1.06.sql" />
     <EmbeddedResource Include="Scripts\1.03-1.04.sql" />
     <EmbeddedResource Include="Scripts\1.02-1.03.sql" />
@@ -209,8 +210,8 @@
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
     <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
-        <Compile Include="Services\SyncListenerServiceBase.cs" />
+    <Compile Include="Services\SyncListenerServiceBase.cs" />
     <Compile Include="Services\SyncDeviceManagerService.cs" />
-    <Compile Include="Services\Interfaces\ISyncDeviceManagerService.cs" />        
+    <Compile Include="Services\Interfaces\ISyncDeviceManagerService.cs" />
   </ItemGroup>
 </Project>
