--- a/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm.Library/MPfm.Library.iOS.csproj
@@ -161,6 +161,7 @@
     <EmbeddedResource Include="WebApp\images\icon_upload.png" />
     <EmbeddedResource Include="Scripts\1.04-1.05.sql" />
     <EmbeddedResource Include="Scripts\1.05-1.06.sql" />
+	<EmbeddedResource Include="Scripts\1.06-1.07.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
