OSX: Added custom check box, fixed bugs in WaveFormScrollView when focusing on a segment.
- Added MPfmCheckBox with CheckBoxControl for a generic and flat
checkbox (the OSX checkbox style did not fit with the flat design).
- Added MPfmLabel for detecting clicks on labels.
- Added outline in DrawRect in GraphicsContextWrapper.
- More bug fixes (see diff).

--- a/MPfm.GenericControls/MPfm.GenericControls.OSX.csproj
+++ b/MPfm.GenericControls/MPfm.GenericControls.OSX.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Basics\BasicPath.cs" />
     <Compile Include="Basics\IBasicPathItem.cs" />
     <Compile Include="Basics\BasicPathLine.cs" />
+    <Compile Include="Controls\CheckBoxControl.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
