--- a/MPfm.GenericControls/MPfm.GenericControls.PCL.csproj
+++ b/MPfm.GenericControls/MPfm.GenericControls.PCL.csproj
@@ -69,5 +69,6 @@
     <Compile Include="Basics\BasicPath.cs" />
     <Compile Include="Basics\IBasicPathItem.cs" />
     <Compile Include="Basics\BasicPathLine.cs" />
+        <Compile Include="Controls\CheckBoxControl.cs" />
   </ItemGroup>
 </Project>
